k8s/asgard/apps/microbin/service.yaml
# k8s/asgard/apps/microbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: microbin
spec:
  type: ClusterIP
  selector:
    app: microbin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
